--- a/index.html
+++ b/index.html
@@ -7,10 +7,42 @@
   </head>
   <body>
     <h1>the quick brown fox jumps over the lazy log</h1>
+    <h1 id="broadcast"></h1>
+    <h1 id="buyNsp"></h1>
+    <h1 id="sellNsp"></h1>
+    <!--  //   data recivied  frontend to backend  -->
+    <label for="name">Name:</label>
+    <input type="text" id="name" /><br /><br />
+
+    <label for="age">Age:</label>
+    <input type="number" id="age" /><br /><br />
+
+    <label for="class">Class:</label>
+    <input type="text" id="class" /><br /><br />
+
+    <label for="gender">Gender:</label>
+    <select id="gender">
+      <option value="Male">Male</option>
+      <option value="Female">Female</option>
+      <option value="Other">Other</option></select
+    ><br /><br />
+
+    <label for="address">Address:</label>
+    <input type="text" id="address" /><br /><br />
+
+    <button onclick="send()">Send</button>
+
+    <div id="output"></div>
+
     <h1 id="time"></h1>
     <script src="/socket.io/socket.io.js"></script>
     <script>
       let socket = io();
+
+      const buySocket = io("/buy");
+
+      const sellSocket = io("/sell");
+
       // server to client data transmition (server )
       socket.on("message", (mst) => {
         // document.write(mst.message);
@@ -24,6 +56,30 @@
           .join("");
         document.body.innerHTML += html;
       });
+
+      socket.on("broadcast", (broadcast) => {
+        document.getElementById("broadcast").innerHTML = broadcast?.message;
+      });
+
+      buySocket.on("buyNsp", (buyNsp) => {
+        document.getElementById("buyNsp").innerHTML = buyNsp?.message;
+      });
+      sellSocket.on("sellNsp", (sellNsp) => {
+        document.getElementById("sellNsp").innerHTML = sellNsp?.message;
+      });
+
+      const send = () => {
+        const name = document.getElementById("name").value;
+        const age = document.getElementById("age").value;
+        const studentClass = document.getElementById("class").value;
+        const gender = document.getElementById("gender").value;
+        const address = document.getElementById("address").value;
+
+        const studentData = { name, age, studentClass, gender, address };
+
+        // socket.send(studentData);
+        socket.emit("student", studentData);
+      };
     </script>
   </body>
 </html>
